packages/errors/test/__snapshots__/CLOUD_GRAPHQL_ERROR.ansi
[31mWe received an unexpected error response from the request to Cypress Cloud:[39m
[31m[39m
[31m[95m"fail whale"[39m[31m[39m
[31m[39m